# Platformer2D

./: .gitignore  .gitmodules  CMakeLists.txt  generate_spritesheet.sh  png_to_txt.sh
.github/workflows/: build-release.yml  cmake-multi-platform.yml
assets/: knight.json  knight_idle.json
assets/knight/: idle.aseprite  knight.sqx  knight_idle.sqx  knight_idle.txt  knight_jump.txt  knight_run.sqx  knight_run.txt  player.aseprite
assets/levels/: cave.tsx  cave_level.tmx  physics_objects.tsx
lib/: CMakeLists.txt
lib/tilengine/: CMakeLists.txt
lib/tilengine/libpng-1.6.44/: CMakeLists.txt
src/: .CMakeLists.txt.un~  .game.cpp.un~  .game.hpp.un~  .game_scene.cpp.un~  .graphics.cpp.un~  .graphics.hpp.un~  .main.cpp.un~  .player.cpp.un~  .player.hpp.un~  .resource_manager.cpp.un~  .resource_manager.hpp.un~  .scenes.hpp.un~  CMakeLists.txt  aseprite.c  camera.hpp  error.hpp  game.cpp  game.hpp  game_scene.cpp  graphics.cpp  graphics.hpp  main.cpp  physac.h  physics.cpp  physics.hpp  physics_constants.hpp  player.cpp  player.hpp  raytmx.c  raytmx.h  resource_manager.cpp  resource_manager.hpp  resources.cpp  resources.hpp  scenes.hpp  system.hpp  tilemap.hpp  utils.hpp
